Edited wiki page through web user interface.

--- a/wiki/PhanCongLan1.wiki
+++ b/wiki/PhanCongLan1.wiki
@@ -1,3 +1,4 @@
+#labels Featured,Phase-Requirements
 *Phân công công việc lần 1(7.4.2010)*
 
 = Phân Công Lần 1 =
@@ -17,5 +18,3 @@ Nhóm 14 - 8 bài học sau và 3 bài ôn sau
 Phân công: Nhóm 11
 
 ==4/ Viết các Usercontrol cơ bản: hiển thị hình ảnh, âm thanh, phim( có các chức năng play, pause, stop), listbox chứa danh sách từ và hiển thị từ được chọn vào textbox.==
-
-
