--- a/wiki/LogChatHuongDanNhapLieu.wiki
+++ b/wiki/LogChatHuongDanNhapLieu.wiki
@@ -108,7 +108,7 @@ Nguyen Ngoc Hoa KHTN: la hinh hay text
 t012789: đợi xíu
 t012789: coi đã
 t012789: là bảng đó
-t012789: vd như hình lúc 7h15 của trang 15
+t012789: vd như hình lúc 7h15 của trang 15 *(coi kĩ lưu ý cái này ở comment bên dưới)
 t012789: là hình số 6
 t012789: nhầm
 t012789: 5
